# wikipedia-trends-mcp

./: README.md  pyproject.toml
src/wikipedia_trends_mcp/: __init__.py
